投票工程第一项目

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -152,6 +152,7 @@
                     { show: 500, hide: 1000 }
             });
 
+            var ids = [];
             if(ids.length<10){
                 $("#applyContent").html("需选择10名候选人！");
                 $(this).popover('show');
