--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -8,7 +8,13 @@
     <title>投票</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
 
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
@@ -26,32 +32,36 @@
     <!--<h2>四川路桥桥梁工程有限责任公司<br>十大杰出贡献员工评选</h2>-->
     <hr style="margin: 10px 0">
     <p>请从以下20位候选人中选出10人。本次投票分为7个类别，每个类别有2-4人，每个类别中需选出1-2人，共计10人。请按规则投票，否则投票无效。</p>
-        <div class="panel panel-primary" >
-            <div class="panel-heading">
-                <div>
-                    <h3 class="panel-title">
-                        标题
-                        <small> - 备注</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="panel-body row" style="margin: -10px">
-                <th:block th:each="showUserInfo,infoStat : ${stringList}">
-                    <div class="thumbnail col-xs-6">
-                        <h4 class="text-center" th:text="${showUserInfo.username}">X</h4>
-                        <img th:src="${'/images/showuserinfo/user/'+showUserInfo.username+'.jpg'}" class="img-rounded">
-                        <div class="caption text-center">
-                            <button name="selectBtn" th:attr="data-type=${showUserInfo.type},data-id=${showUserInfo.id}"
-                                    class="btn-default btn" role="button" style="width: 100px">投票</button>
-                            <div style="height: 6px"></div>
-                            <button th:name="${'infoBtn_'+showUserInfo.id}" th:id="${'infoBtn_'+showUserInfo.id}"
-                                    th:attr="data-name=${showUserInfo.username}" class="btn-default btn"
-                                    data-toggle="modal" data-target="#myModal" role="button" style="width: 100px">候选人详情</button>
-                        </div>
-                    </div>
-                </th:block>
+    <div class="panel panel-primary" >
+        <div class="panel-heading">
+            <div>
+                <h3 class="panel-title">
+                    标题
+                    <small> - 备注</small>
+                </h3>
             </div>
         </div>
+        <div class="panel-body row" style="margin: -8px">
+            <th:block th:each="showUserInfo,infoStat : ${stringList}">
+
+                <div class="col-xs-6 thumbnail">
+                    <!--<div class="">-->
+                    <h4 class="text-center" th:text="${showUserInfo.username}">X</h4>
+                    <img th:src="${'/images/showuserinfo/user/'+showUserInfo.username+'.jpg'}" class="img-rounded" data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+                    <div class="caption text-center">
+                        <button name="selectBtn" th:attr="data-type=${showUserInfo.type},data-id=${showUserInfo.id}"
+                                class="btn-default btn" role="button" style="width: 100px">投票</button>
+                        <div style="height: 6px"></div>
+                        <button th:name="${'infoBtn_'+showUserInfo.id}" th:id="${'infoBtn_'+showUserInfo.id}"
+                                th:attr="data-name=${showUserInfo.username}" class="btn-default btn"
+                                data-toggle="modal" data-target="#myModal" role="button" style="width: 100px">候选人详情</button>
+                    </div>
+                    <!--</div>-->
+                </div>
+
+            </th:block>
+        </div>
+    </div>
 
     <button class="btn btn-success" id="apply" style="width: 100%">投票</button>
     <div class="text-center" style="padding: 15px 0px 30px 0px">
@@ -84,7 +94,8 @@
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 <script>
     $(function(){
