--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,11 @@
 
         #invite_code{margin:0 auto;display: block;width: 60%;height: 80px;border-radius:16px;background: #96a5bb;margin-top:140% }
         input{font-size:36px;padding-left: 20px;text-align: center;color: #435a7c }
-        button {margin:0 auto;display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
+        button.submit_code {margin:0 auto;display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
+            border-right-style: none;
+            border-bottom-style: none;
+            border-left-style: none;background-color:#fff }
+        button.remark_code {margin:0 auto;display: block;background-image: url("/images/smbtn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
             border-right-style: none;
             border-bottom-style: none;
             border-left-style: none;background-color:#fff }
@@ -37,7 +41,8 @@
 <form id="form1" action="/main/checkcode" method="post">
     <div>
         <input id="invite_code" class="form-control" name="invite_code" value="" th:placeholder="${msg==null?'请在这里输入你的手机号':msg}" >
-        <button id="submit_code" name="submit_code"></button>
+        <button class="remark_code" id="remark_code" name="remark_code"></button>
+        <button class="submit_code" id="submit_code" name="submit_code"></button>
     </div>
 </form>
 </body>
