投票工程第一项目

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,11 +8,11 @@
 
         #invite_code{margin:0 auto;display: block;width: 60%;height: 80px;border-radius:16px;background: #96a5bb;margin-top:140% }
         input{font-size:36px;padding-left: 20px;text-align: center;color: #435a7c }
-        button.submit_code {margin:0 auto;display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
+        button.submit_code {margin:0 10px 0 auto;display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
             border-right-style: none;
             border-bottom-style: none;
             border-left-style: none;background-color:#fff }
-        button.remark_code {margin:0 auto;display: block;background-image: url("/images/smbtn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
+        button.remark_code {margin:0 auto 0 10px;display: block;background-image: url("/images/smbtn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
             border-right-style: none;
             border-bottom-style: none;
             border-left-style: none;background-color:#fff }
