--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -47,7 +47,7 @@
                 <div class="col-xs-6 thumbnail">
                     <!--<div class="">-->
                     <h4 class="text-center" th:text="${showUserInfo.username}">X</h4>
-                    <img th:src="${'/images/showuserinfo/user/'+showUserInfo.username+'.jpg'}" class="img-rounded" data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+                    <img th:src="${'/images/showuserinfo/user/'+showUserInfo.username+'.jpg'}" class="img-rounded" style="max-height: 200px; max-width: 200px;">
                     <div class="caption text-center">
                         <button name="selectBtn" th:attr="data-type=${showUserInfo.type},data-id=${showUserInfo.id}"
                                 class="btn-default btn" role="button" style="width: 100px">投票</button>
