--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,16 +6,10 @@
     <style type="text/css">
         body{background-image: url("/images/bg.jpg");background-size: 100%}
 
-        #invite_code{margin:0 auto;display: block;width: 60%;height: 80px;border-radius:16px;background: #96a5bb;margin-top:140% }
+        #invite_code{margin:0 auto;display: block;width: 60%;height: 80px;border-radius:16px;background: #96a5bb;margin-top:120% }
         input{font-size:36px;padding-left: 20px;text-align: center;color: #435a7c }
-        button.submit_code {margin:0 10px 0 auto;display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
-            border-right-style: none;
-            border-bottom-style: none;
-            border-left-style: none;background-color:#fff }
-        button.remark_code {margin:0 auto 0 10px;display: block;background-image: url("/images/smbtn.png");background-size: 100%;width: 300px;height: 80px;margin-top:50px;border-top-style: none;
-            border-right-style: none;
-            border-bottom-style: none;
-            border-left-style: none;background-color:#fff }
+        .submit_code {display: block;background-image: url("/images/btn.png");background-size: 100%;width: 300px;height: 80px;}
+        .remark_code {display: block;background-image: url("/images/smbtn.png");background-size: 100%;width: 300px;height: 80px;}
 
         input[name="invite_code"]::-webkit-input-placeholder { /* WebKit browsers */
             color: #435a7c;
@@ -41,8 +35,10 @@
 <form id="form1" action="/main/checkcode" method="post">
     <div>
         <input id="invite_code" class="form-control" name="invite_code" value="" th:placeholder="${msg==null?'请在这里输入你的手机号':msg}" >
-        <button class="remark_code" id="remark_code" name="remark_code"></button>
-        <button class="submit_code" id="submit_code" name="submit_code"></button>
+        <div style="padding-top: 80px">
+            <button type="button" class="remark_code" id="remark_code" name="remark_code" style="float: left;margin-left: 16%" onclick="window.location.href='/select'"></button>
+            <button type="submit" class="submit_code" id="submit_code" name="submit_code" style="float: right;margin-right: 16%" ></button>
+        </div>
     </div>
 </form>
 </body>
