--- a/src/main/resources/templates/rank.html
+++ b/src/main/resources/templates/rank.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <title>投票成功</title>
+    <link rel="stylesheet" href="/src/frozen.css">
+    <link rel="stylesheet" href="/src/demo.css">
+    <style type="text/css">
+        img{width: 100%}
+
+    </style>
 </head>
+
 <body>
-投票成功
+<img src="/images/tpcg.jpg">
 </body>
 </html>
