投票工程第一项目

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -36,7 +36,7 @@
     <div>
         <input id="invite_code" class="form-control" name="invite_code" value="" th:placeholder="${msg==null?'请在这里输入你的手机号':msg}" >
         <div style="padding-top: 80px">
-            <button type="button" class="remark_code" id="remark_code" name="remark_code" style="float: left;margin-left: 16%" onclick="window.location.href='/select'"></button>
+            <button type="button" class="remark_code" id="remark_code" name="remark_code" style="float: left;margin-left: 16%" onclick="window.location.href='/tpsm'"></button>
             <button type="submit" class="submit_code" id="submit_code" name="submit_code" style="float: right;margin-right: 16%" ></button>
         </div>
     </div>
