--- a/src/main/resources/templates/tpsm.html
+++ b/src/main/resources/templates/tpsm.html
@@ -38,7 +38,7 @@
                 
             </ul>
         </div>
-		<div class="logo" style="text-align: center;"><a href="#" class="back">返回</a></div>
+		<div class="logo" style="text-align: center;"><a href="/main" class="back">返回</a></div>
     </div>
 </section>
 
