投票工程第一项目

--- a/src/main/resources/templates/tpsm.html
+++ b/src/main/resources/templates/tpsm.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,8 +5,8 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="format-detection" content="telephone=no">
         <title>投票说明</title>
-        <link rel="stylesheet" href="../../../../../../../补充/web/frozen.css">
-        <link rel="stylesheet" href="../../../../../../../补充/web/demo.css">
+        <link rel="stylesheet" href="/src/frozen.css">
+        <link rel="stylesheet" href="/src/demo.css">
     </head>
     
     <body ontouchstart>
@@ -52,7 +51,7 @@
             }
         });
         $('.ui-header .ui-btn').click(function(){
-            location.href= 'index.html';
+            location.href= '/main';
         });
         </script>
     </body>
