投票工程第一项目

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -34,7 +34,7 @@
 <div id="main_show"></div>
 <form id="form1" action="/main/checkcode" method="post">
     <div>
-        <input id="invite_code" class="form-control" name="invite_code" value="" th:placeholder="${msg==null?'请在这里输入你的手机号':msg}" >
+        <input id="invite_code" class="form-control" name="invite_code" value="" th:placeholder="${msg==null?'请输入密码':msg}" >
         <div style="padding-top: 80px">
             <button type="button" class="remark_code" id="remark_code" name="remark_code" style="float: left;margin-left: 16%" onclick="window.location.href='/tpsm'"></button>
             <button type="submit" class="submit_code" id="submit_code" name="submit_code" style="float: right;margin-right: 16%" ></button>
