投票工程第一项目

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -31,12 +31,13 @@
 <div id="selectBody" class="container">
     <!--<h2>四川路桥桥梁工程有限责任公司<br>十大杰出贡献员工评选</h2>-->
     <hr style="margin: 10px 0">
+    <p>请从以下31位候选人中选出10人</p>
     <div class="panel panel-primary" >
         <div class="panel-heading">
             <div>
                 <h3 class="panel-title">
-                    标题
-                    <small> - 备注</small>
+                    第七届四川路桥十大杰出青年候选人
+                    <!--<small> - 备注</small>-->
                 </h3>
             </div>
         </div>
