投票工程第一项目

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -130,10 +130,10 @@
                 $(this).toggleClass(function(){
                     return "btn-primary";
                 });
-                if($(this).html() == "已投"){
+                if($(this).html() == "已选"){
                     $(this).html("投票");
                 }else{
-                    $(this).html("已投");
+                    $(this).html("已选");
                 }
             }else{
                 $(this).popover({
