投票工程第一项目

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -31,7 +31,7 @@
 <div id="selectBody" class="container">
     <!--<h2>四川路桥桥梁工程有限责任公司<br>十大杰出贡献员工评选</h2>-->
     <hr style="margin: 10px 0">
-    <p>请从以下31位候选人中选出10人</p>
+    <p>请从以下31位候选人中选出10人，如果出现误点选择了候选人，请再次点击该候选人投票按钮，取消选择。</p>
     <div class="panel panel-primary" >
         <div class="panel-heading">
             <div>
