--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -137,14 +137,15 @@
             }
 
             $(this).popover({
-                content:"已选择"+$("button.btn-primary[name='selectBtn'][data-type="+type+"]").length+"名候选人！",
+                content:function(){
+                    return "已选择"+$("button.btn-primary[name='selectBtn'][data-type="+type+"]").length+"名候选人！"
+                },
                 placement: "top",
                 trigger:"manual",
                 delay:
                     { show: 500, hide: 1000 }
 
             });
-
             $(this).popover('show');
             var that = this;
             setTimeout(function(){
