--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>首页</title>
     <style type="text/css">
-        body{background-image: url("/images/bg.jpg");background-size: 100%}
+        body{background-image: url("/images/bg.jpeg");background-size: 100%}
 
         #invite_code{margin:0 auto;display: block;width: 60%;height: 80px;border-radius:16px;background: #96a5bb;margin-top:120% }
         input{font-size:36px;padding-left: 20px;text-align: center;color: #435a7c }
