投票工程第一项目

--- a/src/main/resources/templates/tpsm.html
+++ b/src/main/resources/templates/tpsm.html
@@ -26,13 +26,13 @@
                   1.请各分子公司输入各分子公司对应的投票密码进入投票程序；
                 </li>
                 <li class="ui-border-t">
-                  2.每个公司统一分配了300个投票名额；
+                  2.每个公司统一分配了80个投票名额；
                 </li>
                 <li class="ui-border-t">
                   3.投票需要选择10名候选人，才能提交投票，请各个分子公司投票人认真查阅各个候选人资料，投出您神圣的一票；
                 </li>
                 <li class="ui-border-t">
-                  4.投票时间为3天，即2019年x月x日~2019年x月x日截止。
+                  4.投票时间：2019年4月22日~2019年4月24日截止。
                 </li>
                 
             </ul>
