投票工程第一项目

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>票选第七届四川路桥十大杰出青年</title>
     <style type="text/css">
         body{background-image: url("/images/bg.jpeg");background-size: 100%}
 
