--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="initial-scale=1 maximum-scale=1, user-scalable=no">
     <title>票选第七届四川路桥十大杰出青年</title>
     <style type="text/css">
         body{background-image: url("/images/bg.jpeg");background-size: 100%}
