--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script>
-        window.location.href="/main";
+        window.location.href="/select";
     </script>
 </head>
 <body>
