--- a/src/main/resources/templates/tpsm.html
+++ b/src/main/resources/templates/tpsm.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,8 +6,8 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="format-detection" content="telephone=no">
         <title>投票说明</title>
-        <link rel="stylesheet" href="/src/frozen.css">
-        <link rel="stylesheet" href="/src/demo.css">
+        <link rel="stylesheet" href="frozen.css">
+        <link rel="stylesheet" href="demo.css">
     </head>
     
     <body ontouchstart>
@@ -23,21 +24,30 @@
         <div class="demo-block">
             <ul class="ui-list ui-list-pure ui-border-b">
                 <li class="ui-border-t">
-                  1.请各分子公司输入各分子公司对应的投票密码进入投票程序；
+                  1.第七届四川路桥十大杰出青年评选采用集团领导班子+中层管理干部+职工代表（5:3:2权重比例）投票票数相加而产生；
                 </li>
                 <li class="ui-border-t">
-                  2.每个公司统一分配了80个投票名额；
+                  2.网络投票为职工代表投票通道；
                 </li>
                 <li class="ui-border-t">
-                  3.投票需要选择10名候选人，才能提交投票，请各个分子公司投票人认真查阅各个候选人资料，投出您神圣的一票；
+                  3.请集团（股份）机关各部门和各分子公司职工代表输入对应的投票密码进入投票程序；
                 </li>
                 <li class="ui-border-t">
-                  4.投票时间：2019年4月22日~2019年4月24日截止。
+                  4.集团（股份）机关和每个分子公司统一分配了80个职工代表投票名额;
+                </li>
+                <li class="ui-border-t">
+                  5.每一位职工代表有且仅有一次投票机会;
+                </li>
+                <li class="ui-border-t">
+                  6.投票需要选择10名候选人，才能提交投票，请每一位职工代表认真查阅各个候选人资料，投出您神圣的一票;
+                </li>
+                <li class="ui-border-t">
+                  7.投票时间：2019年4月22日~2019年4月25日截止。
                 </li>
                 
             </ul>
         </div>
-		<div class="logo" style="text-align: center;"><a href="/main" class="back">返回</a></div>
+		<div class="logo" style="text-align: center;"><a href="#" class="back">返回</a></div>
     </div>
 </section>
 
@@ -51,7 +61,7 @@
             }
         });
         $('.ui-header .ui-btn').click(function(){
-            location.href= '/main';
+            location.href= 'index.html';
         });
         </script>
     </body>
