--- a/src/main/resources/templates/tpsm.html
+++ b/src/main/resources/templates/tpsm.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="format-detection" content="telephone=no">
         <title>投票说明</title>
-        <link rel="stylesheet" href="frozen.css">
-        <link rel="stylesheet" href="demo.css">
+        <link rel="stylesheet" href="/src/frozen.css">
+        <link rel="stylesheet" href="/src/demo.css">
     </head>
     
     <body ontouchstart>
