投票工程第一项目

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
     <title>票选第七届四川路桥十大杰出青年</title>
     <style type="text/css">
         body{
-            background-image: url("/images/bg.jpeg");
+            background-image: url("/images/bg.jpg");
             /*background-size: 100%*/
             background-size: cover;  //只支持IE9+
             -webkit-background-size: cover; //webkit核心
